[gd_scene load_steps=8 format=3 uid="uid://0lxjjvh0ap21"]

[ext_resource type="Script" path="res://Entities/Components/Collectable/collectable.gd" id="1_8hci7"]
[ext_resource type="Texture2D" uid="uid://oop5a2845tcf" path="res://Entities/Items/Art/Resources.png" id="1_tojma"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1ox2m"]
atlas = ExtResource("1_tojma")
region = Rect2(0, 0, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_pfh5i"]
radius = 20.0

[sub_resource type="Animation" id="Animation_56qdd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_k2pp8"]
resource_name = "animate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oe6vr"]
_data = {
"RESET": SubResource("Animation_56qdd"),
"animate": SubResource("Animation_k2pp8")
}

[node name="Collectable" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_8hci7")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = SubResource("AtlasTexture_1ox2m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_pfh5i")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oe6vr")
}
autoplay = "animate"

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
